@@ -18,6 +18,7 @@ UPLOAD_REMOVE=kill
 UPLOAD_BROWSE_HOST=browse
 UPLOAD_CLEAR=clear
 LIBRARY_LAUNCH=preview
+LIBRARY_TAB=library_tab
 LIBRARY_TO_PLAYLIST=playlist
 LIBRARY_DELETE=delete
 LIBRARY_ANNOTATE=annotate
