@@ -1,6 +1,9 @@
 frostwire (5.2.4) stable; urgency=high
   * Smart search updates uses less DHT resources and fixes logic bugs
     that results into faster and better search results.
+  * Book search supports .cbr, .cbz, .cb7, .cbt and .cba file formats.
+  * New "Show in Library" action for finished transfers. It is now the
+    default action when a finished transfer has been double clicked.
  
  -- FrostWire Team <contact@frostwire.com>  Tue, 25 Oct 2011 16:26:08 -0500
 
